--- a/Clientes/Web/publico/css/sitio.css
+++ b/Clientes/Web/publico/css/sitio.css
@@ -31,3 +31,24 @@ h3{
 .info{
     font-size: 14px;
 }
+.navbar{
+    background-color: #BEE7B8;
+}
+.icon-bar{
+    background-color: #065143;
+}
+.navbar-nav>li>a{
+    color: #065143;
+}
+.btn-success, .navbar-nav>li>a:hover{
+    background-color: #84B37D;
+}
+.btn-success:hover{
+    background-color: #619859;
+}
+.form-control:focus {
+    border-color: #619859;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(190, 231, 184,.8);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(190, 231, 184,.8);
+}
