--- a/Clientes/Web/privado/css/sitio.css
+++ b/Clientes/Web/privado/css/sitio.css
@@ -1,27 +1,48 @@
 .numeroDePagina{
     font-size: large;
 }
-
-select.especie{
-	width: auto;
-}
-
 .retro{
 	position: fixed;
 }
-
 .menuScrolleable{
 	margin-top: 50px;
 }
-
 .fotoWidth{
 	width: 1000px;
 }
-
 .fotoMaxWidth{
 	max-width: 100%;
 }
-
 .link{
 	cursor: pointer;
+}
+.navbar{
+    background-color: #BEE7B8;
+}
+.icon-bar{
+    background-color: #065143;
+}
+.navbar-nav>li>a{
+    color: #065143;
+}
+.navbar-nav>li>a:hover{
+    background-color: #84B37D;
+}
+.btn-link{
+    color: #84B37D;
+}
+.resultados{
+    width: 70px;
+    display: inline;
+    height: 28px;
+}
+.form-control:focus {
+    border-color: #619859;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(190, 231, 184,.8);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(190, 231, 184,.8);
+}
+.btn-link:focus, .btn-link:hover {
+    color: #619859;
+    outline: none;
 }
