--- a/Clientes/Apps/iOS/OMMFCM/Base.lproj/Main.storyboard
+++ b/Clientes/Apps/iOS/OMMFCM/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="1Mi-xw-ggA">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="1Mi-xw-ggA">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <scenes>
         <!--Foto-->
@@ -41,6 +41,15 @@
                                         <color key="tintColor" red="0.51764705879999995" green="0.70196078429999997" blue="0.49019607840000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <segue destination="MQ5-LJ-Odu" kind="push" id="dvx-pq-I7Z"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Pgg-2n-HaA">
+                                        <rect key="frame" x="8" y="134" width="22" height="22"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                        <color key="tintColor" red="0.51764705879999995" green="0.70196078429999997" blue="0.49019607840000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" backgroundImage="icono_admiracion.png"/>
+                                        <connections>
+                                            <segue destination="SBQ-8y-BI3" kind="push" id="GcS-Ge-oAi"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -103,6 +112,54 @@
             </objects>
             <point key="canvasLocation" x="906" y="406"/>
         </scene>
+        <!--Tips-->
+        <scene sceneID="ue2-2B-QyH">
+            <objects>
+                <viewController id="SBQ-8y-BI3" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="foG-V8-SFE">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" id="xRx-bJ-QAi">
+                                <rect key="frame" x="0.0" y="224" width="320" height="344"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="12" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hzZ-TV-Zta">
+                                        <rect key="frame" x="40" y="39" width="241" height="265"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                        <string key="text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo</string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.3294117647" green="0.59999999999999998" blue="0.57254901960000004" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <view contentMode="scaleToFill" id="u08-Pk-mjI">
+                                <rect key="frame" x="0.0" y="20" width="320" height="224"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tips" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Wh0-dO-Imn">
+                                        <rect key="frame" x="8" y="55" width="304" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.023529411760000001" green="0.31764705879999999" blue="0.26274509800000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.74509803919999995" green="0.90588235289999997" blue="0.72156862749999995" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Tips" id="Teu-2T-kly">
+                        <barButtonItem key="backBarButtonItem" title="Regresar" id="uO8-Gi-4cA"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rJl-Xf-a0P" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="692" y="1184"/>
+        </scene>
         <!--Acerca de-->
         <scene sceneID="mCB-SQ-nSF">
             <objects>
@@ -149,7 +206,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OPq-WA-02B" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="906" y="1082"/>
+            <point key="canvasLocation" x="1119" y="1184"/>
         </scene>
         <!--Selecciona una Ubicación-->
         <scene sceneID="0iu-Kh-hwl">
@@ -497,10 +554,11 @@
     <resources>
         <image name="camara_icono.png" width="512" height="512"/>
         <image name="carpeta_icono.png" width="512" height="512"/>
+        <image name="icono_admiracion.png" width="120" height="106"/>
         <image name="icono_confirmacion.png" width="500" height="500"/>
         <image name="logo imt.jpg" width="470" height="283"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="kgX-eL-XqH"/>
+        <segue reference="KWU-pY-L1Z"/>
     </inferredMetricsTieBreakers>
 </document>
