--- a/Clientes/Web/publico/css/sitio.css
+++ b/Clientes/Web/publico/css/sitio.css
@@ -32,16 +32,18 @@ h3{
     font-size: 14px;
 }
 .navbar{
-    background-color: #BEE7B8;
+    background-color: #84B37D;
 }
 .icon-bar{
     background-color: #065143;
 }
-.navbar-nav>li>a{
+.navbar-nav>li>a, .panel-success>.panel-heading{
     color: #065143;
+    font-weight: bold;
 }
-.btn-success, .navbar-nav>li>a:hover{
-    background-color: #84B37D;
+.btn-success, .navbar-nav>li>a:hover, .panel-success>.panel-heading{
+    background-color: #BEE7B8;
+    font-weight: bold;
 }
 .btn-success:hover{
     background-color: #619859;
@@ -51,4 +53,19 @@ h3{
     outline: 0;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(190, 231, 184,.8);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(190, 231, 184,.8);
+}
+.fotoMaxWidth{
+    max-width: 100%;
+}
+q{
+    font-style: italic;
+}
+p{
+    text-align: justify;
+}
+.centrado{
+    text-align: center;
+}
+img{
+    margin: 3px;
 }
