--- a/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_logo.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/res/layout/activity_actividad_logo.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:src="@mipmap/logo_inicio"
+        android:src="@drawable/logo_inicio"
         android:layout_gravity="center"
         android:padding="40dp"
         />
