--- a/Clientes/Web/publico/css/sitio.css
+++ b/Clientes/Web/publico/css/sitio.css
@@ -70,9 +70,12 @@ img{
     margin: 3px;
 }
 .navbar-brand{
-    padding: 0px;
-    padding-left: 10px
+    padding: 0px 10px 0px 10px;
 }
 .navbar-brand>img{
     margin: 0px;
+}
+footer{
+    text-align: right;
+    padding: 15px;
 }
